--- a/packages/arex-request-example/package.json
+++ b/packages/arex-request-example/package.json
@@ -13,10 +13,12 @@
     "@emotion/react": "^11.10.6",
     "@emotion/serialize": "^1.1.1",
     "@emotion/styled": "^11.10.6",
+    "ahooks": "^3.7.7",
     "allotment": "^1.18.1",
     "antd": "^5.4.2",
     "arex-request-core": "workspace:^0.0.1-beta.4",
     "arex-request-runtime": "^1.0.2",
+    "axios": "^1.4.0",
     "buffer": "^6.0.3",
     "jquery": "^3.6.4",
     "monaco-editor": "^0.37.1",
