--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -28,7 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
-    "use-immer": "^0.9.0"
+    "use-immer": "^0.9.0",
+    "react-json-view": "^1.21.3"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
