--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "pnpm -r do-test",
     "dev": "pnpm --stream -r do-dev",
     "build": "pnpm -r do-build",
     "lint": "eslint \"packages/**/*.{ts,tsx}\" --fix",
