--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "build:code": "tsc && vite build",
     "build:decl": "tsc --project tsconfig.decl.json",
-    "do-build": "pnpm run build:code && pnpm run build:decl"
+    "do-build": "pnpm run build:code && pnpm run build:decl",
+    "do-test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -28,16 +30,22 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
-    "use-immer": "^0.9.0",
-    "react-json-view": "^1.21.3"
+    "react-json-view": "^1.21.3",
+    "use-immer": "^0.9.0"
   },
   "devDependencies": {
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@babel/core": "^7.21.4",
     "@emotion/babel-plugin": "^11.10.6",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "@vitest/coverage-c8": "^0.31.0",
+    "jsdom": "^22.0.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vitest": "^0.31.0"
   }
 }
