--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arex-request-core",
-  "version": "0.0.1-beta.30",
+  "version": "0.0.1-beta.31",
   "type": "module",
   "main": "dist/arex-request-core.umd.cjs",
   "module": "dist/arex-request-core.js",
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/serialize": "^1.1.1",
     "@emotion/styled": "^11.10.6",
+    "@monaco-editor/react": "^4.5.1",
     "allotment": "^1.18.1",
     "antd": "^5.4.2",
     "copy-to-clipboard": "^3.3.3",
@@ -34,13 +35,13 @@
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@babel/core": "^7.21.4",
     "@emotion/babel-plugin": "^11.10.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react-swc": "^3.3.1",
     "@vitest/coverage-c8": "^0.31.0",
     "jsdom": "^22.0.0",
