--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -27,6 +27,7 @@
     "copy-to-clipboard": "^3.3.3",
     "i18next": "^22.4.14",
     "immer": "^9.0.21",
+    "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
