--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -1,11 +1,11 @@
 {
   "name": "arex-request-core",
-  "version": "0.0.1-beta.37",
+  "version": "0.0.1-beta.39",
   "type": "module",
   "main": "dist/arex-request-core.umd.cjs",
   "module": "dist/arex-request-core.js",
   "scripts": {
-    "build:code": "tsc && vite build",
+    "build:code": "vite build",
     "build:decl": "tsc --project tsconfig.decl.json",
     "do-build": "pnpm run build:code && pnpm run build:decl",
     "do-test": "vitest",
@@ -28,24 +28,33 @@
     "i18next": "^22.4.14",
     "immer": "^9.0.21",
     "monaco-editor": "^0.38.0",
+    "postman-collection": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
     "react-json-view": "^1.21.3",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.0",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@emotion/babel-plugin": "^11.10.6",
+    "@iconify/json": "^2.2.76",
+    "@svgr/core": "^8.0.0",
+    "@svgr/plugin-jsx": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/postman-collection": "^3.5.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/sortablejs": "^1.15.1",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react-swc": "^3.3.1",
     "@vitest/coverage-c8": "^0.31.0",
     "jsdom": "^22.0.0",
     "typescript": "^4.9.3",
+    "unplugin-icons": "^0.16.3",
     "vite": "^4.2.0",
     "vitest": "^0.31.0"
   }
