--- a/packages/arex-request-example/package.json
+++ b/packages/arex-request-example/package.json
@@ -5,10 +5,11 @@
   "type": "module",
   "scripts": {
     "do-dev": "vite",
-    "do-build": "tsc && vite build",
+    "do-build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.6",
     "@emotion/serialize": "^1.1.1",
@@ -23,15 +24,24 @@
     "postman-collection": "^4.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.0",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.0",
     "xspy": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@emotion/babel-plugin": "^11.10.6",
+    "@iconify/json": "^2.2.76",
+    "@svgr/core": "^8.0.0",
+    "@svgr/plugin-jsx": "^8.0.1",
+    "@types/postman-collection": "^3.5.7",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/sortablejs": "^1.15.1",
     "@vitejs/plugin-react-swc": "^3.3.1",
     "typescript": "^4.9.3",
+    "unplugin-icons": "^0.16.3",
     "vite": "^4.2.0",
     "vite-plugin-static-copy": "^0.13.1"
   }
