--- a/packages/arex-request-example/tsconfig.json
+++ b/packages/arex-request-example/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+      "unplugin-icons/types/react",
+    ],
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
