--- a/packages/arex-request-core/tsconfig.decl.json
+++ b/packages/arex-request-core/tsconfig.decl.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "types": [
+      "unplugin-icons/types/react",
+    ],
     "target": "es2017",
     "module": "esnext",
     "lib": ["esnext","dom"],
