--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -5,6 +5,7 @@
   "main": "dist/arex-request-core.umd.cjs",
   "module": "dist/arex-request-core.js",
   "scripts": {
+    "prepare": "pnpm run do-build",
     "build:code": "tsc && vite build",
     "build:decl": "tsc --project tsconfig.decl.json",
     "do-build": "pnpm run build:code && pnpm run build:decl",
