feat: update to 55

--- a/packages/arex-request-core/package.json
+++ b/packages/arex-request-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arex-request-core",
-  "version": "0.0.1-beta.54",
+  "version": "0.0.1-beta.55",
   "type": "module",
   "main": "dist/arex-request-core.umd.cjs",
   "module": "dist/arex-request-core.js",
@@ -22,7 +22,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/serialize": "^1.1.1",
     "@emotion/styled": "^11.10.6",
-    "@monaco-editor/react": "^4.5.1",
+    "@arextest/monaco-react": "^4.5.1",
     "allotment": "^1.18.1",
     "antd": "^5.4.2",
     "copy-to-clipboard": "^3.3.3",
